more whats new copy updates

--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -42,7 +42,8 @@
                                     </div>
                                     <h3>Quantum Academy</h3>
                                     <hr class="bs">
-                                    <p>This year we are proud to offer an entirely new program called <strong>Quantum Academy</strong>. It encompasses all the best aspects of both Quantum University and Leadership Forum, while providing its own unique flow.</p>
+                                    <p>We are offering a new program called <strong>Quantum Academy</strong>. This program includes curriculum from both Quantum University and Leadership Forum, while integrating new curriculum which has been designed for
+                                        incoming high school seniors and first and second year college students.</p>
                                 </div>
                             </div>
                             <div class="col-sm-3-bs col-xs-12-bs text-center-bs">
@@ -50,9 +51,9 @@
                                     <div class="icon-hold">
                                         <i class="fa fa-bars fa-3x"></i>
                                     </div>
-                                    <h3>10 and 6 Day Options</h3>
+                                    <h3>10 and 6 Day Programs</h3>
                                     <hr class="bs">
-                                    <p>For Senior Forum there will be 10 day as well as 6 day options. For Junior Forum there will be 6 Day Options.</p>
+                                    <p>There will be both 10-Day and 6-Day programs available for Senior Forum. Junior Forum will now be a 6-Day program.</p>
                                 </div>
                             </div>
                             <div class="col-sm-3-bs col-xs-12-bs text-center-bs">
@@ -62,7 +63,7 @@
                                     </div>
                                     <h3>Thank You Academic Advisory!</h3>
                                     <hr class="bs">
-                                    <p>Thank you to the Academic Advisory - Ben Balkwill, Karen Borbolla, Patti Brucky, Bobbi DePorter, Megan Kennedy, Jeff Miller, Richard Reyes, and Charles Smith - for all of the support in making the program updates!</p>
+                                    <p>Thank you to the Academic Advisory - Ben Balkwill, Karen Borbolla, Patti Brucki, Jeff Miller, Richard Reyes, Bobbi DePorter, Megan Kennedy, and Charles Smith - for all of the support in making the program updates!</p>
                                 </div>
                             </div>
                             <div class="col-sm-3-bs col-xs-12-bs text-center-bs">
@@ -72,7 +73,7 @@
                                     </div>
                                     <h3>Distinctions</h3>
                                     <hr class="bs">
-                                    <p>[Distinctions to highlight.]</p>
+                                    <p>We will cover all curriculum distinctions at Know It By Heart on March 29th - April 2nd.</p>
                                 </div>
                             </div>
                         </div>
@@ -85,34 +86,24 @@
                 <div class="tab-pane fade" id="panel-wn-2" role="tabpanel">
                     <div class="container-bs">
                         <div class="row-bs">
-                            <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
+                            <div class="col-sm-6-bs col-xs-12-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
                                         <i class="fa fa-map-signs fa-3x"></i>
                                     </div>
-                                    <h3>5 Sites to 3 Sites</h3>
+                                    <h3>Stateside - 3 Sites</h3>
                                     <hr class="bs">
-                                    <p>This year we are moving from 5 sites to 3 -- Standford University, California State Univserity San Marcos, and Villanova University.</p>
+                                    <p>We will have SuperCamp programs at the following 3 sites this year -- Standford University, California State Univserity San Marcos, and Villanova University.</p>
                                 </div>
                             </div>
-                            <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
+                            <div class="col-sm-6-bs col-xs-12-bs text-center-bs">
                                 <div class="location-breakdown">
                                     <div class="icon-hold">
                                         <i class="fa fa-globe fa-3x"></i>
                                     </div>
                                     <h3>International</h3>
                                     <hr class="bs">
-                                    <p>We are going to be offering many more international sites including: Bali, Hong Kong, Italy, Singapore, Thailand, and more!</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-4-bs col-xs-12-bs text-center-bs">
-                                <div class="location-breakdown">
-                                    <div class="icon-hold">
-                                        <i class="fa fa-desktop fa-3x"></i>
-                                    </div>
-                                    <h3>New Additions To The SuperCamp Website</h3>
-                                    <hr class="bs">
-                                    <p>[Here are Links to Pages in SC Website]</p>
+                                    <p>We will have many opportunities to work at international SuperCamp sites including: Bali, Hong Kong, Italy, Singapore, Thailand, and more!</p>
                                 </div>
                             </div>
                         </div>
