--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -103,8 +103,7 @@
                                     </div>
                                     <h3>International</h3>
                                     <hr class="bs">
-                                    <p>We will have many opportunities to work at <a style="text-decoration: underline; color: -webkit-link;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/#international">international</a> SuperCamp sites
-                                        including: Bali, Hong Kong, Italy, Singapore, Thailand, and more!</p>
+                                    <p>We will have many opportunities to work at <a style="text-decoration: underline; color: -webkit-link;" target="_blank" href="http://www.supercamp.com/stafftestpage/dates-and-locations/#international">international</a>                                        SuperCamp sites including: Bali, Hong Kong, Italy, Singapore, Thailand, and more!</p>
                                 </div>
                             </div>
                         </div>
