--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -103,8 +103,13 @@
                                     </div>
                                     <h3>International</h3>
                                     <hr class="bs">
-                                    <p>We will have many opportunities to work at <a style="text-decoration: underline; color: -webkit-link;" target="_blank" href="http://www.supercamp.com/stafftestpage/dates-and-locations/#international">international</a>                                        SuperCamp sites including: Bali, Hong Kong, Italy, Singapore, Thailand, and more!</p>
+                                    <p>We will have many opportunities to work at international SuperCamp sites including: Bali, Hong Kong, Italy, Singapore, Thailand, and more!</p>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="row-bs">
+                            <div class="col-xs-12 text-center-bs">
+                                <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important; margin-top: 50px;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
                             </div>
                         </div>
                     </div>
