changed website title to real one

--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -214,7 +214,7 @@
                                     </div>
                                     <h3>New Staff Website</h3>
                                     <hr class="bs">
-                                    <p>We have moved the staff website from www.supercampstaff.com to www.supercamp.com/[finalized name]! It has a completely new look and feel, and we hope you love it just as much as we do.</p>
+                                    <p>We have moved the staff website from www.supercampstaff.com to www.supercamp.com/staff ! It has a completely new look and feel, and we hope you love it just as much as we do.</p>
                                     <p style="font-size: 12px;">Special thanks to Alex Lee for all the hard work.</p>
                                 </div>
                             </div>
