changed website and changed title of acadmeic advisory

--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -61,7 +61,7 @@
                                     <div class="icon-hold">
                                         <i class="fa fa-thumbs-up fa-3x"></i>
                                     </div>
-                                    <h3>Thank You Academic Advisory!</h3>
+                                    <h3>Academic Advisory</h3>
                                     <hr class="bs">
                                     <p>Thank you to the Academic Advisory - Ben Balkwill, Karen Borbolla, Patti Brucki, Jeff Miller, Richard Reyes, Bobbi DePorter, Megan Kennedy, and Charles Smith - for all of the support in making the program updates!</p>
                                 </div>
