--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -183,7 +183,7 @@
                                     <h3>Virtual Training</h3>
                                     <hr class="bs">
                                     <p>All other positions, including leadership positions, will receive online virtual training.</p>
-                                    <p>The virtual kick-off for Leaders In Training (required for Decision Team Members) will be on Saturday, March 11th. Please save the date! Start and end time of LIT kick-off is TBD.</p>
+                                    <p>The virtual kick-off for <strong>Leaders In Training</strong> (required for Decision Team Members) will be on Saturday, March 11th. Please save the date! Start and end time of LIT kick-off is TBD.</p>
                                     <p>All other training dates and times vary by position and will be announced via email communication.</p>
                                 </div>
                             </div>
