bolded lit and bolded kibh

--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -171,7 +171,7 @@
                                     </div>
                                     <h3>Know It By Heart</h3>
                                     <hr class="bs">
-                                    <p>We are having a Know It By Heart this spring to cover all of the new distinctions for the summer.</p>
+                                    <p>We are having a <strong>Know It By Heart</strong> this spring to cover all of the new distinctions for the summer.</p>
                                     <p>March 29th - April 2nd</p>
                                 </div>
                             </div>
