--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -93,7 +93,7 @@
                                     </div>
                                     <h3>Stateside - 3 Sites</h3>
                                     <hr class="bs">
-                                    <p>We will have SuperCamp programs at the following 3 sites this year -- Standford University, California State Univserity San Marcos, and Villanova University.</p>
+                                    <p>We will have SuperCamp programs at the following 3 sites this year -- Stanford University, California State University San Marcos, and Villanova University.</p>
                                 </div>
                             </div>
                             <div class="col-sm-6-bs col-xs-12-bs text-center-bs">
@@ -172,7 +172,7 @@
                                     <h3>Know It By Heart</h3>
                                     <hr class="bs">
                                     <p>We are having a <strong>Know It By Heart</strong> this spring to cover all of the new distinctions for the summer.</p>
-                                    <p>March 29th - April 2nd</p>
+                                    <p>Mark Your Calendars! Wednesday, March 29th - Sunday, April 2nd</p>
                                 </div>
                             </div>
                             <div class="col-sm-6-bs col-xs-12-bs text-center-bs">
@@ -183,8 +183,11 @@
                                     <h3>Virtual Training</h3>
                                     <hr class="bs">
                                     <p>All other positions, including leadership positions, will receive online virtual training.</p>
-                                    <p>The virtual kick-off for <strong>Leaders In Training</strong> (required for Decision Team Members) will be on Saturday, March 11th. Please save the date! Start and end time of LIT kick-off is TBD.</p>
-                                    <p>All other training dates and times vary by position and will be announced via email communication.</p>
+                                    <p><strong>Leaders In Training</strong> dates (required for Decision Team Members) – Mark Your Calendars!</p>
+                                    <p>Saturday, March 11th – Virtual Kick-Off for LIT</p>
+                                    <p>Mid-March to Mid-May (dates TBD) – Role Specific Trainings for D-Team members</p>
+                                    <p>Saturday, May 20th – Review and Final Preparation for LIT</p>
+                                    <p style="font-size: 12px;">*All start and end times for LIT are TBD</p>
                                 </div>
                             </div>
                         </div>
