--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -4,7 +4,7 @@
             <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
                 <h2 class="section-heading-bs">What's New 2017</h2>
                 <hr class="bs" style="border-color: #97ABBD;">
-                <p class="bs">From new programs to payscales, we've made some additions and updates going into 2017. Take a look and get aquainted!</p>
+                <p class="bs">From new programs to pay scales, we've made some additions and updates going into 2017. Take a look and get acquainted!</p>
             </div>
         </div>
         <div class="row-bs">
@@ -128,7 +128,7 @@
                                     </div>
                                     <h3>4 FACs to 5 FACs</h3>
                                     <hr class="bs">
-                                    <p>We are about introducing a 5 FAC model*. All Facilitators will continue to hold the same responsibilities as they have in previous years, with the 5th Facilitator also serving as the primary TL Supervisor.</p>
+                                    <p>We are introducing a 5 FAC model*. All Facilitators will continue to hold the same responsibilities as they have in previous years, with the 5th Facilitator also serving as the primary TL Supervisor.</p>
                                     <p style="font-size: 12px;">*5 FAC Model applies to stateside sites only.</p>
                                 </div>
                             </div>
@@ -171,7 +171,7 @@
                                     </div>
                                     <h3>Know It By Heart</h3>
                                     <hr class="bs">
-                                    <p>We are having a <strong>Know It By Heart</strong> this spring to cover all of the new distinctions for the summer.</p>
+                                    <p>We are having a <strong>Know It By Heart</strong> for Facilitators this spring to cover all of the new distinctions for the summer.</p>
                                     <p>Mark Your Calendars! Wednesday, March 29th - Sunday, April 2nd</p>
                                 </div>
                             </div>
@@ -183,7 +183,8 @@
                                     <h3>Virtual Training</h3>
                                     <hr class="bs">
                                     <p>All other positions, including leadership positions, will receive online virtual training.</p>
-                                    <p><strong>Leaders In Training</strong> dates (required for Decision Team Members) – Mark Your Calendars!</p>
+                                    <p><strong>Leaders In Training</strong> (required for Decision Team Members)</p>
+                                    <p><u> - Mark Your Calendars! - </u></p>
                                     <p>Saturday, March 11th – Virtual Kick-Off for LIT</p>
                                     <p>Mid-March to Mid-May (dates TBD) – Role Specific Trainings for D-Team members</p>
                                     <p>Saturday, May 20th – Review and Final Preparation for LIT</p>
