--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -128,7 +128,7 @@
                                     </div>
                                     <h3>4 FACs to 5 FACs</h3>
                                     <hr class="bs">
-                                    <p>We are introducing a 5 FAC model*. All Facilitators will continue to hold the same responsibilities as they have in previous years, with the 5th Facilitator also serving as the primary TL Supervisor.</p>
+                                    <p>We are introducing a 5 FAC model*. All Facilitators will continue to hold the same responsibilities as they have in previous years, with the 5th Facilitator also serving as the primary TL Coordinator.</p>
                                     <p style="font-size: 12px;">*5 FAC Model applies to stateside sites only.</p>
                                 </div>
                             </div>
@@ -139,7 +139,7 @@
                                     </div>
                                     <h3>2 TLs to 3 TLs</h3>
                                     <hr class="bs">
-                                    <p>We are also introducing a 3 TL model*. Each group of 3 TLs will have approximately 20 campers in their team. All TLs will have a new daily schedule.</p>
+                                    <p>We are also introducing a 3 TL model*. Each group of 3 TLs will have approximately 20 campers on their team. All TLs will have a new daily schedule.</p>
                                     <p style="font-size: 12px;">*3 TL Model applies to stateside sites only.</p>
                                 </div>
                             </div>
@@ -184,7 +184,7 @@
                                     <hr class="bs">
                                     <p>All other positions, including leadership positions, will receive online virtual training.</p>
                                     <p><strong>Leaders In Training</strong> (required for Decision Team Members)</p>
-                                    <p><u> - Mark Your Calendars! - </u></p>
+                                    <p><u> - Facilitators: Mark Your Calendars! - </u></p>
                                     <p>Saturday, March 11th – Virtual Kick-Off for LIT</p>
                                     <p>Mid-March to Mid-May (dates TBD) – Role Specific Trainings for D-Team members</p>
                                     <p>Saturday, May 20th – Review and Final Preparation for LIT</p>
@@ -218,7 +218,7 @@
                                     </div>
                                     <h3>New Staff Website</h3>
                                     <hr class="bs">
-                                    <p>We have moved the staff website from www.supercampstaff.com to www.supercamp.com/staff ! It has a completely new look and feel, and we hope you love it just as much as we do.</p>
+                                    <p>We have moved the staff website from www.supercampstaff.com to www.supercamp.com/staff. It has a completely new look and feel, and we hope you love it just as much as we do!</p>
                                     <p style="font-size: 12px;">Special thanks to Alex Lee for all the hard work.</p>
                                 </div>
                             </div>
