wrong spot for facilitators

--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -172,7 +172,8 @@
                                     <h3>Know It By Heart</h3>
                                     <hr class="bs">
                                     <p>We are having a <strong>Know It By Heart</strong> for Facilitators this spring to cover all of the new distinctions for the summer.</p>
-                                    <p>Mark Your Calendars! Wednesday, March 29th - Sunday, April 2nd</p>
+                                    <p><u>- Facilitators: Mark Your Calendars! -</u></p>
+                                    <p>Wednesday, March 29th - Sunday, April 2nd</p>
                                 </div>
                             </div>
                             <div class="col-sm-6-bs col-xs-12-bs text-center-bs">
@@ -184,7 +185,7 @@
                                     <hr class="bs">
                                     <p>All other positions, including leadership positions, will receive online virtual training.</p>
                                     <p><strong>Leaders In Training</strong> (required for Decision Team Members)</p>
-                                    <p><u> - Facilitators: Mark Your Calendars! - </u></p>
+                                    <p><u> - Mark Your Calendars! - </u></p>
                                     <p>Saturday, March 11th – Virtual Kick-Off for LIT</p>
                                     <p>Mid-March to Mid-May (dates TBD) – Role Specific Trainings for D-Team members</p>
                                     <p>Saturday, May 20th – Review and Final Preparation for LIT</p>
