changing sizing on diff formats

--- a/Contact Information.html
+++ b/Contact Information.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="row-bs">
-            <div class="col-xs-6-bs col-md-3-bs text-center-bs">
+            <div class="col-md-3-bs text-center-bs">
                 <!-- original
                 <div class="ch-item ch-img-1" style="text-align: center;">
                     <div class="inner-text" style="text-align: center;">
@@ -37,7 +37,7 @@
                 <p class="text-faded" style="padding-bottom: 25px;">Faculty Relations Liaison</p>
                 -->
             </div>
-            <div class="col-xs-6-bs col-md-3-bs text-center-bs">
+            <div class="col-md-3-bs text-center-bs">
                 <!-- original
                 <div class="ch-item ch-img-2" style="text-align: center;">
                     <div class="ch-info">
@@ -62,7 +62,7 @@
                 <p class="text-faded" style="padding-bottom: 25px;">Curriculum Developer</p>
                 -->
             </div>
-            <div class="col-xs-6-bs col-md-3-bs text-center-bs">
+            <div class="col-md-3-bs text-center-bs">
                 <!-- original
                 <div class="ch-item ch-img-3" style="text-align: center;">
                     <div class="ch-info">
@@ -87,7 +87,7 @@
                 <p class="text-faded" style="padding-bottom: 25px;">Operations Manager</p>
                 -->
             </div>
-            <div class="col-xs-6-bs col-md-3-bs text-center-bs">
+            <div class="col-md-3-bs text-center-bs">
                 <!-- original
                 <div class="ch-item ch-img-4" style="text-align: center;">
                     <div class="ch-info">
