got rid of old commented stuff and changed title and hr

--- a/Contact Information.html
+++ b/Contact Information.html
@@ -3,24 +3,13 @@
     <div class="container-bs">
         <div class="row-bs">
             <div class="col-lg-12-bs text-center-bs">
-                <h2 class="section-heading-bs" style="color: #fff;">Our Headquarters Team</h2>
-                <hr style="border-color: #97ABBD;">
+                <h2 class="section-heading-bs" style="color: #fff;">Contact Information</h2>
+                <hr class="bs" style="border-color: #97ABBD;">
                 <h3 class="section-subheading-bs text-faded" style="font-size: 16px; text-transform: none; margin-bottom: 75px;">These folks work hard to make sure everything behind the scenes run smoothly. From staffing to curriculum, all of our staff works with the same goal in mind: to create the best possible experience for your child. And it shows!</h3>
             </div>
         </div>
         <div class="row-bs">
             <div class="col-md-3-bs text-center-bs">
-                <!-- original
-                <div class="ch-item ch-img-1" style="text-align: center;">
-                    <div class="inner-text" style="text-align: center;">
-                        <h3>MEGAN KENNEDY</h3>
-                    </div>
-                    <div class="ch-info">
-                        <h3>Megan Kennedy</h3>
-                        <hr class="bs">
-                        <i class="fa fa-user fa-3x"></i>
-                    </div>
-                </div> -->
                 <div class="ch-item ch-img-1">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
@@ -32,20 +21,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- get rid of bottom names
-                <h4 style="margin-bottom: 0px; margin-top: 25px; color: #fff;">Megan Kennedy</h4>
-                <p class="text-faded" style="padding-bottom: 25px;">Faculty Relations Liaison</p>
-                -->
             </div>
             <div class="col-md-3-bs text-center-bs">
-                <!-- original
-                <div class="ch-item ch-img-2" style="text-align: center;">
-                    <div class="ch-info">
-                        <h3>Charles Smith</h3>
-                        <hr class="bs">
-                        <i class="fa fa-user fa-3x"></i>
-                    </div>
-                </div> -->
                 <div class="ch-item ch-img-2">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
@@ -57,20 +34,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- get rid of bottom names
-                <h4 style="margin-bottom: 0px; margin-top: 25px; color: #fff;">Charles Smith</h4>
-                <p class="text-faded" style="padding-bottom: 25px;">Curriculum Developer</p>
-                -->
             </div>
             <div class="col-md-3-bs text-center-bs">
-                <!-- original
-                <div class="ch-item ch-img-3" style="text-align: center;">
-                    <div class="ch-info">
-                        <h3>Spencer Birch</h3>
-                        <hr class="bs">
-                        <i class="fa fa-user fa-3x"></i>
-                    </div>
-                </div> -->
                 <div class="ch-item ch-img-3">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
@@ -82,20 +47,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- get rid of bottom names
-                <h4 style="margin-bottom: 0px; margin-top: 25px; color: #fff;">Spencer Birch</h4>
-                <p class="text-faded" style="padding-bottom: 25px;">Operations Manager</p>
-                -->
             </div>
             <div class="col-md-3-bs text-center-bs">
-                <!-- original
-                <div class="ch-item ch-img-4" style="text-align: center;">
-                    <div class="ch-info">
-                        <h3>Alex Lee</h3>
-                        <hr class="bs">
-                        <i class="fa fa-user fa-3x"></i>
-                    </div>
-                </div> -->
                 <div class="ch-item ch-img-4">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
@@ -107,10 +60,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- get rid of bottom names
-                <h4 style="margin-bottom: 0px; margin-top: 25px; color: #fff;">Alex Lee</h4>
-                <p class="text-faded" style="padding-bottom: 25px;">HR Administrative Specialist</p>
-                -->
             </div>
         </div>
         <div style="height:150px"></div>
