some goofy one liner that is gunna get me yelled at

--- a/Contact Information.html
+++ b/Contact Information.html
@@ -2,10 +2,10 @@
 <section id="contact-info" class="bg-primary-bs">
     <div class="container-bs">
         <div class="row-bs">
-            <div class="col-lg-12-bs text-center-bs">
-                <h2 class="section-heading-bs" style="color: #fff;">Contact Information</h2>
+            <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
+                <h2 class="section-heading-bs">Contact Information</h2>
                 <hr class="bs" style="border-color: #97ABBD;">
-                <h3 class="section-subheading-bs text-faded" style="font-size: 16px; text-transform: none; margin-bottom: 75px;">These folks work hard to make sure everything behind the scenes run smoothly. From staffing to curriculum, all of our staff works with the same goal in mind: to create the best possible experience for your child. And it shows!</h3>
+                <p class="bs">Have any questions? Wondering about who to go to or how to reach them? Look no further!</p>
             </div>
         </div>
         <div class="row-bs">
