changed columns and changed hr color on whats new

--- a/Contact Information.html
+++ b/Contact Information.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="row-bs">
-            <div class="col-md-3-bs text-center-bs">
+            <div class="col-sm-6-bs col-md-3-bs text-center-bs">
                 <div class="ch-item ch-img-1">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
@@ -22,7 +22,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3-bs text-center-bs">
+            <div class="col-sm-6-bs col-md-3-bs text-center-bs">
                 <div class="ch-item ch-img-2">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
@@ -35,7 +35,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3-bs text-center-bs">
+            <div class="col-sm-6-bs col-md-3-bs text-center-bs">
                 <div class="ch-item ch-img-3">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3-bs text-center-bs">
+            <div class="col-sm-6-bs col-md-3-bs text-center-bs">
                 <div class="ch-item ch-img-4">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
