--- a/What's New Section - Tabs.html
+++ b/What's New Section - Tabs.html
@@ -3,7 +3,7 @@
         <div class="row-bs">
             <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
                 <h2 class="section-heading-bs">What's New 2017</h2>
-                <hr class="bs" style="border-color: #97ABBD;">
+                <hr class="bs" style="border-color: #45769C;">
                 <p class="bs">From new programs to pay scales, we've made some additions and updates going into 2017. Take a look and get acquainted!</p>
             </div>
         </div>
