added Katie and moved columns around

--- a/Contact Information.html
+++ b/Contact Information.html
@@ -9,33 +9,7 @@
             </div>
         </div>
         <div class="row-bs">
-            <div class="col-sm-6-bs col-md-3-bs text-center-bs">
-                <div class="ch-item ch-img-1">
-                    <div class="ch-info-wrap">
-                        <div class="ch-info">
-                            <div class="ch-info-front ch-img-1"></div>
-                            <div class="ch-info-back">
-                                <h3 style="padding: 1.563em 0 0 0;">Faculty Relations Liaison</h3>
-                                <p style="padding:0px 0.313em;">(800) 285-3276 x140 <a style="padding-top: 0px;" href="mailto:mkennedy@qln.com">mkennedy@QLN.com</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6-bs col-md-3-bs text-center-bs">
-                <div class="ch-item ch-img-2">
-                    <div class="ch-info-wrap">
-                        <div class="ch-info">
-                            <div class="ch-info-front ch-img-2"></div>
-                            <div class="ch-info-back">
-                                <h3>Curriculum Developer</h3>
-                                <p style="padding:0px 0.313em;">(800) 285-3276 x129 <a style="padding-top: 0px;" href="mailto:csmith@qln.com">csmith@QLN.com</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6-bs col-md-3-bs text-center-bs">
+            <div class="col-sm-6-bs col-md-4-bs text-center-bs">
                 <div class="ch-item ch-img-3">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
@@ -48,7 +22,20 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6-bs col-md-3-bs text-center-bs">
+            <div class="col-sm-6-bs col-md-4-bs text-center-bs">
+                <div class="ch-item ch-img-1">
+                    <div class="ch-info-wrap">
+                        <div class="ch-info">
+                            <div class="ch-info-front ch-img-1"></div>
+                            <div class="ch-info-back">
+                                <h3 style="padding: 1.563em 0 0 0;">Faculty Relations Liaison</h3>
+                                <p style="padding:0px 0.313em;">(800) 285-3276 x140 <a style="padding-top: 0px;" href="mailto:mkennedy@qln.com">mkennedy@QLN.com</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6-bs col-md-4-bs text-center-bs">
                 <div class="ch-item ch-img-4">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
@@ -56,6 +43,32 @@
                             <div class="ch-info-back">
                                 <h3 style="padding: 1.875em 0 0 0;">HR Administrative Specialist</h3>
                                 <p style="padding:0px 0.313em;">(800) 285-3276 x139 <a style="padding-top: 0px;" href="mailto:alee@qln.com">alee@QLN.com</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6-bs text-center-bs">
+                <div class="ch-item ch-img-2">
+                    <div class="ch-info-wrap">
+                        <div class="ch-info">
+                            <div class="ch-info-front ch-img-2"></div>
+                            <div class="ch-info-back">
+                                <h3>Curriculum Developer</h3>
+                                <p style="padding:0px 0.313em;">(800) 285-3276 x129 <a style="padding-top: 0px;" href="mailto:csmith@qln.com">csmith@QLN.com</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12-bs col-md-6-bs text-center-bs">
+                <div class="ch-item ch-img-5">
+                    <div class="ch-info-wrap">
+                        <div class="ch-info">
+                            <div class="ch-info-front ch-img-5"></div>
+                            <div class="ch-info-back">
+                                <h3 style="padding: 1.875em 0 0 0;">Operations Specialist</h3>
+                                <p style="padding:0px 0.313em;">(800) 285-3276 x134 <a style="padding-top: 0px;" href="mailto:kterrill@qln.com">kterrill@QLN.com</a></p>
                             </div>
                         </div>
                     </div>
