--- a/Header.html
+++ b/Header.html
@@ -2,15 +2,15 @@
     <div class="mobile-headers-overlay"></div>
     <div class="mobile-headers-text">
         <div class="container-bs">
-            <div class="row-bs">
+            <div class="row-bs" style="padding-top: 100px;">
                 <div class="col-lg-8-bs col-lg-offset-2-bs text-center-bs">
-                    <h2 class="section-heading-bs" style="margin-top: 150px;">Join Our 2017 Team!</h2>
+                    <h2 class="section-heading-bs" style="font-size: 4.0em;">Join Our 2017 Team!</h2>
                     <hr class="bs" style="border-color: #97ABBD;">
                 </div>
             </div>
             <div class="row-bs">
-                <div class="col-xs-12-bs text-center-bs" style="margin-top: 75px;">
-                    <a style="font-size: 10px; padding: 0 8px;" target="_blank" class="qbutton green" href="https://supercamp.campintouch.com/ui/forms/application/staff/App">2017 Application Window Now Open - Apply Now</a>
+                <div class="col-xs-12-bs text-center-bs" style="margin-top: 75px; padding-bottom: 100px;">
+                    <a style="padding: 0 8px;" target="_blank" class="qbutton green" href="https://supercamp.campintouch.com/ui/forms/application/staff/App">Apply Now</a>
                     <a style="padding: 0 8px;" class="qbutton green" href="#whatsnew">What's New For 2017</a>
                     <a style="padding: 0 8px;" target="_blank" class="qbutton green" href="http://www.supercamp.com/our-staff/">Meet Our Team</a>
                     <a style="padding: 0 8px;" class="qbutton green" href="#contact-info">Contact Information</a>
