--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -11,12 +11,12 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services hvr-float-shadow">
                     <span class="icon">
-                        <a href="http://supercamp.com/stafftestpage/available-positions/site-administrator/" class="icon-link">
+                        <a href="http://supercamp.com/staff/site-administrator/" class="icon-link">
                             <i class="fa fa-home"></i>
                         </a>    
 					</span>
                     <div class="desc">
-                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/site-administrator/">Site Administrator</a></h3>
+                        <h3><a href="http://supercamp.com/staff/site-administrator/">Site Administrator</a></h3>
                         <p>Responsible for the overall administrative and customer service success of SuperCamp. Serve as a liaison between QLN and the university.</p>
                     </div>
                 </div>
@@ -24,12 +24,12 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services hvr-float-shadow">
                     <span class="icon">
-                        <a href="http://supercamp.com/stafftestpage/available-positions/site-counselor/" class="icon-link">
+                        <a href="http://supercamp.com/staff/site-counselor/" class="icon-link">
 							<i class="fa fa-wrench"></i>
                         </a>
 						</span>
                     <div class="desc">
-                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/site-counselor/">Site Counselor</a></h3>
+                        <h3><a href="http://supercamp.com/staff/site-counselor/">Site Counselor</a></h3>
                         <p>Responsible for coaching both campers and staff on how to best handle demanding situations. Oversee camp documentation.</p>
                     </div>
                 </div>
@@ -37,12 +37,12 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services hvr-float-shadow">
                     <span class="icon">
-                        <a href="http://supercamp.com/stafftestpage/available-positions/lead-facilitator/" class="icon-link">
+                        <a href="http://supercamp.com/staff/lead-facilitator/" class="icon-link">
 							<i class="fa fa-user"></i>
                         </a>
 						</span>
                     <div class="desc">
-                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/lead-facilitator/">Lead Facilitator</a></h3>
+                        <h3><a href="http://supercamp.com/staff/lead-facilitator/">Lead Facilitator</a></h3>
                         <p>Brings mastery of facilitation, depth of knowledge of the curriculum, systems thinking, and leadership skills to create the culture of camp.</p>
                     </div>
                 </div>
@@ -50,12 +50,12 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services hvr-float-shadow">
                     <span class="icon">
-                        <a href="http://supercamp.com/stafftestpage/available-positions/facilitator/" class="icon-link">
+                        <a href="http://supercamp.com/staff/facilitator/" class="icon-link">
 							<i class="fa fa-globe"></i>
                         </a>
 						</span>
                     <div class="desc">
-                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/facilitator/">Facilitator</a></h3>
+                        <h3><a href="http://supercamp.com/staff/facilitator/">Facilitator</a></h3>
                         <p>Instruct Quantum Learning and Life Skills curriculum to the large group, as well as lead academic course-rooms.</p>
                     </div>
                 </div>
@@ -63,12 +63,12 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services hvr-float-shadow">
                     <span class="icon">
-                        <a href="http://supercamp.com/stafftestpage/available-positions/logistics-coordinator/" class="icon-link">
+                        <a href="http://supercamp.com/staff/logistics-coordinator/" class="icon-link">
 							<i class="fa fa-calculator"></i>
                         </a>
 						</span>
                     <div class="desc">
-                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/logistics-coordinator/">Logistics Coordinator</a></h3>
+                        <h3><a href="http://supercamp.com/staff/logistics-coordinator/">Logistics Coordinator</a></h3>
                         <p>Ensure that all logistical systems are in place and maintain a professional, impeccable, well-organized environment at camp.</p>
                     </div>
                 </div>
@@ -76,12 +76,12 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services hvr-float-shadow">
                     <span class="icon">
-                        <a href="http://supercamp.com/stafftestpage/available-positions/office-coordinator/" class="icon-link">
+                        <a href="http://supercamp.com/staff/office-coordinator/" class="icon-link">
 							<i class="fa fa-paperclip"></i>
                         </a>
 						</span>
                     <div class="desc">
-                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/office-coordinator/">Office Coordinator</a></h3>
+                        <h3><a href="http://supercamp.com/staff/office-coordinator/">Office Coordinator</a></h3>
                         <p>Responsible for many of the clerical functions of camp that support parents, other staff, and correspondence with QLN.</p>
                     </div>
                 </div>
@@ -89,12 +89,12 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services hvr-float-shadow">
                     <span class="icon">
-                        <a href="http://supercamp.com/stafftestpage/available-positions/wellness-person/" class="icon-link">
+                        <a href="http://supercamp.com/staff/wellness-person/" class="icon-link">
 							<i class="fa fa-plus"></i>
                         </a>
 						</span>
                     <div class="desc">
-                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/wellness-person/">Wellness Person</a></h3>
+                        <h3><a href="http://supercamp.com/staff/wellness-person/">Wellness Person</a></h3>
                         <p>Have a solid understanding of First Aid/CPR procedures, document medical incidents, and maintain clear communication with staff and parents.</p>
                     </div>
                 </div>
@@ -102,12 +102,12 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services hvr-float-shadow">
                     <span class="icon">
-                        <a href="http://supercamp.com/stafftestpage/available-positions/senior-team-leader/" class="icon-link">
+                        <a href="http://supercamp.com/staff/senior-team-leader/" class="icon-link">
 							<i class="fa fa-cubes"></i>
                         </a>
 						</span>
                     <div class="desc">
-                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/senior-team-leader/">Senior Team Leader</a></h3>
+                        <h3><a href="http://supercamp.com/staff/senior-team-leader/">Senior Team Leader</a></h3>
                         <p>Encourages consistency among the other Team Leaders and acts as a leadership mentor for returning campers.</p>
                     </div>
                 </div>
@@ -115,13 +115,13 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services hvr-float-shadow">
                     <span class="icon">
-                        <a href="http://supercamp.com/stafftestpage/available-positions/team-leader/" class="icon-link">
+                        <a href="http://supercamp.com/staff/team-leader/" class="icon-link">
 							<i class="fa fa-users"></i>
                         </a>
 						</span>
                     <div class="desc">
-                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/team-leader/">Team Leader</a></h3>
-                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/team-leader/">(AKA Camp Counselor)</a></h3>
+                        <h3><a href="http://supercamp.com/staff/team-leader/">Team Leader</a></h3>
+                        <h3><a href="http://supercamp.com/staff/team-leader/">(AKA Camp Counselor)</a></h3>
                         <p>Catalyst for team building and personal growth, all while encouraging camp spirit.</p>
                     </div>
                 </div>
