--- a/index - Call To Action.html
+++ b/index - Call To Action.html
@@ -5,7 +5,7 @@
                 <h2 class="section-heading-bs">Apply Today!</h2>
                 <hr class="bs">
                 <p style="color: #fff;">Ready to start your SuperCamp experience? That's great! Fill out our <a style="text-decoration: underline; color: -webkit-link;" href="https://supercamp.campintouch.com/ui/forms/application/staff/App">online application</a>, and we'll
-                    be in touch! If you have any questions, please visit our <a style="text-decoration: underline; color: -webkit-link;" href="http://www.supercamp.com/stafftestpage/staff-faq/">FAQ page</a> or reach out to us via email or phone.</p>
+                    be in touch! If you have any questions, please visit our <a style="text-decoration: underline; color: -webkit-link;" href="http://www.supercamp.com/staff/staff-faq/">FAQ page</a> or reach out to us via email or phone.</p>
             </div>
         </div>
         <div class="row-bs">
