added link on our team to staff and adding contact info for customer service

--- a/Contact Information.html
+++ b/Contact Information.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="row-bs">
-            <div class="col-sm-6-bs text-center-bs">
+            <div class="col-sm-4-bs text-center-bs">
                 <div class="ch-item ch-img-2">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
@@ -63,13 +63,26 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6-bs text-center-bs">
+            <div class="col-sm-4-bs text-center-bs">
                 <div class="ch-item ch-img-5">
                     <div class="ch-info-wrap">
                         <div class="ch-info">
                             <div class="ch-info-front ch-img-5"></div>
                             <div class="ch-info-back">
                                 <h3 style="padding: 1.875em 0 0 0;">Operations Specialist</h3>
+                                <p style="padding:0px 0.313em;">(800) 285-3276 x134 <a style="padding-top: 0px;" href="mailto:kterrill@qln.com">kterrill@QLN.com</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4-bs text-center-bs">
+                <div class="ch-item ch-img-6">
+                    <div class="ch-info-wrap">
+                        <div class="ch-info">
+                            <div class="ch-info-front ch-img-6"></div>
+                            <div class="ch-info-back">
+                                <h3 style="padding: 1.875em 0 0 0;">Customer Service</h3>
                                 <p style="padding:0px 0.313em;">(800) 285-3276 x134 <a style="padding-top: 0px;" href="mailto:kterrill@qln.com">kterrill@QLN.com</a></p>
                             </div>
                         </div>
