--- a/Contact Information.html
+++ b/Contact Information.html
@@ -83,7 +83,7 @@
                             <div class="ch-info-front ch-img-6"></div>
                             <div class="ch-info-back">
                                 <h3 style="padding: 1.875em 0 0 0;">Customer Service</h3>
-                                <p style="padding:0px 0.313em;">(800) 285-3276 x134 <a style="padding-top: 0px;" href="mailto:kterrill@qln.com">kterrill@QLN.com</a></p>
+                                <p style="padding:0px 0.313em;">(800) 228-5327 Option 1 <a style="padding-top: 0px; font-size: 1.5em;" href="mailto:Enrollments@supercamp.com">@</a></p>
                             </div>
                         </div>
                     </div>
